remove the stupid windows end-line symbol

--- a/writedown/npt-neq/alanine.tex
+++ b/writedown/npt-neq/alanine.tex
@@ -1186,8 +1186,8 @@ an external EF.
 To describe the system, we use a classical force field with TIP3P water model.
 The EF is well know to be able to protonate the water molecule at the
 intensity we used in the paper. However, this happens at the time
-scale of femtosecond, which is much shorter than the slowest time
-scale revolved by the current research, so on average it should not play an essential role on the conformational dynamics.
+scale of femtoseconds, which is much shorter than the slowest time
+scale resolved by the current research, so on average it should not play an essential role on the conformational dynamics.
 The polarization with respect to the external EF also does
 not play a important role, because  under the EF of 1~V/nm, the induced dipole
 of water is only c.a. 0.05~Debye that is negligible comparing with the
@@ -1195,7 +1195,7 @@ dipole moment response observed in our simulations.  Therefore, it is
 reasonable to use a non-polarizable model in this study.  The reason we
 prefer a rigid water model is that it is computationally more
 efficient than any polarizable water model.  We also want to remind
-the reader that it has been reported recently that the physical scale of the slowest 
+the reader that it has been reported recently that the physical scale of the slowest
 dynamics differs in a considerable way between different force
 fields~\cite{vitalini2013speed}. However, the qualitative conclusions (for
 example the answer to the question of which is the slowest and the second slowest process, from which
